--- a/static/404.html
+++ b/static/404.html
@@ -19,15 +19,14 @@
     <button class="btn-main" anim="ripple" onclick="send('/settings.html')"><i class="bi bi-gear" style="font-size:30px;"></i>Settings</button>
     <button class="btn-main" anim="ripple" onclick="send('/gms')"><i class="bi bi-joystick" style="font-size:30px;"></i>Games</button>
     <button class="btn-main" anim="ripple" onclick="send('/apps')"><i class="bi bi-grid-fill" style="font-size:30px;"></i>Apps</button><br>
-    <a href="/" class="title" anim="ripple"><img src="/assets/img/doge2.jpg" style="width:22px;height:22px;" id="logo"> Doge Unblocker</a>    
+    <a href="/" class="title" anim="ripple"><img src="https://cdn.glitch.global/414e2b10-348d-4986-b99e-64a2450b6141/Unlocked%20Joy%20Logo.png?v=1738126173123" style="width:30px;height:30px;" id="logo">Joy Unblocker</a>    
   </nav>
   <div class="centered themesExcluded">
     <h1 style="font-family:poppins;font-size:65px;">404 Not Found</h1>
     <p>Could not find the page you were looking for</p>
   </div>
   <div class="footer themesExcluded" style="text-align:right;">
-    <a href="https://discord.gg/sWPHCdxCPU" target="new"><i class="bi bi-discord"></i></a>
-    <a href="https://github.com/dogenetwork/v4" target="new"><i class="bi bi-github"></i></a>
+    <a href="https://discord.com/invite/upuM9GXAay" target="new"><i class="bi bi-discord"></i></a>
   </div>
   <div class="bottom-right-content themesExcluded">
   <a href="/info">Site Info</a>
@@ -35,4 +34,5 @@
 <script src="/assets/js/themes.js?v=3"></script>
 <script src="/assets/js/main.js?v=3"></script>
 </body>
+  <!--<a href="https://github.com/dogenetwork/v4" target="new"><i class="bi bi-github"></i></a>
 </html>
