--- a/static/index.html
+++ b/static/index.html
@@ -32,8 +32,7 @@
       </form>
     </div>
     <div class="footer themesExcluded" style="text-align:right;">
-      <a href="https://discord.gg/sWPHCdxCPU" target="new"><i class="bi bi-discord"></i></a>
-      <a href="https://github.com/dogenetwork/v4" target="new"><i class="bi bi-github"></i></a>
+      <a href="https://discord.com/invite/upuM9GXAay" target="new"><i class="bi bi-discord"></i></a>
     </div>
     <div class="bottom-right-content themesExcluded">
     <a href="/info">Site Info</a>
