--- a/static/info.html
+++ b/static/info.html
@@ -36,11 +36,11 @@
   <h1 style="font-size:68px;">Information</h1>
   <div class="themesExcluded">
     <h2>Website</h2>
-    <p>Doge Unblocker</p>
+    <p>Joy Unblocker</p>
   </div>
   <div class="themesExcluded">
     <h2>Version</h2>
-    <p>V4.4.13</p>
+    <p>V1.8</p>
   </div>
   <div class="themesExcluded">
     <h2>Build Info</h2>
@@ -48,14 +48,9 @@
 </div>
   <div class="themesExcluded">
     <h2>Developers</h2>
-    <p>Fowntain</p>
+    <p>Unlocked Joy</p>
   </div>
-  <div class="themesExcluded">
-    <h2>Link Deployment Info</h2>
-    <p>Self Deployment (GitHub)</p>
-  </div>
-  <a href="https://discord.gg/sWPHCdxCPU" target="new"><i class="bi bi-discord"></i></a>
-  <a href="https://github.com/dogenetwork/v4" target="new"><i class="bi bi-github"></i></a>
+  <a href="https://discord.com/invite/upuM9GXAay" target="new"><i class="bi bi-discord"></i></a>
 </div>
   <div class="footer themesExcluded" style="position:fixed;text-align:right;">
     <a href="/">Back</a>
