--- a/static/settings.html
+++ b/static/settings.html
@@ -56,7 +56,12 @@
   <p style="font-size:23px;">Redirects/hides the site instantly when a key combo is pressed.</p>
 <button class="option" style="width: 150px;max-width:150px;" anim="ripple" onclick="showPK()">Set Hotkey</button><button style="width: 150px;" class="option" anim="ripple" onclick="removePK()">Remove</button>
 </div>
-<div class="settingscontainer"><br>
+<script src="/assets/js/themes.js?v=3"></script>
+<script src="/assets/js/settings.js?v=3"></script>
+<script src="/assets/js/main.js?v=3"></script>
+</body>
+</html>
+<!--<div class="settingscontainer"><br>
   <p style="font-weight: bold;">Background</p>
   <p>Customize the site with backgrounds.</p>
 <button class="option" style="width: 150px;max-width:150px;" anim="ripple" onclick="showBackgroundPopup()">Set Background</button><button style="width: 150px;" class="option" anim="ripple" onclick="resetBackground()">Remove</button>
